# snekwest

./: .gitignore  Cargo.toml  PLAN.md  README.md  conftest.py  pyproject.toml
.github/workflows/: CI.yml  python-eol-check.yml
python/snekwest/: __init__.py  __version__.py  _bindings.pyi  _internal_utils.py  adapters.py  api.py  auth.py  certs.py  compat.py  cookies.py  exceptions.py  help.py  hooks.py  models.py  packages.py  sessions.py  status_codes.py  structures.py  utils.py
src/: case_insensitive_dict.rs  exceptions.rs  lib.rs  prepared_request.rs  request_params.rs  response.rs  session.rs  utils.rs
tests/: conftest.py  test_public_api.py
