[package]
name = "_bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
pythonize = "0.27.0"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "multipart",
] }
serde_json = "1"
base64 = "0.22"
url = "2"
