[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "snekwest"
version = "0.1.0"
description = "A blazingly fast, memory-safe HTTP client ecosystem for Python, powered by Rust's reqwest."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "snekwest._bindings"

[tool.mypy]
exclude = ["python-requests/"]

[tool.pyright]
exclude = ["python-requests/"]

[tool.ruff]
# lint.extend-select = ["ALL"]
exclude = ["python-requests/"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-httpbin>=2.1.0",
    "pylint",
    "pyright",
    "mypy",
    "ty",
    "ruff",
]
